--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Welcome to my site</h1>
-<p>I'm hosted with Github Pages.</p>
+<p>I'm hosted with Github Pages. What if I do changes here though?</p>
 </body>
 </html>
