Setup from new mac

--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Welcome to my site</h1>
-<p>I'm hosted with Github Pages. What if I do changes here though?</p>
-</body>
-</html>
+Hello world
